[package]
name = "parawasm"
version = "0.1.0"
edition = "2021"
description = "ParaOS"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmparser-nostd = { version = "0.83.0", default-features = false }
byteorder = { version = "1.4.3", default-features = false }

[dependencies.iced-x86]
version = "1.16.0"
default-features = false
features = ["no_std", "encoder", "decoder", "intel", "code_asm"]

[features]
test = []